# SmartLabBackend/internal/pkg/controllers/create-med-card.go
@@ -1,19 +1,19 @@
 package controllers
 
 import (
+	"fmt"
 	"github.com/gin-gonic/gin"
 	"net/http"
 	"oat-lab-module/internal/pkg/models"
 )
 
 type CreateMedCardRequest struct {
-	Email        string         `json:"email"`
-	FirstName    string         `json:"firstName"`
-	LastName     string         `json:"lastName"`
-	MiddleName   string         `json:"middleName"`
-	BirthDate    string         `json:"birthDate"`
-	ProfileImage string         `json:"profileImage,omitempty"`
-	Sex          models.SexType `json:"sex"`
+	Email      string         `json:"email"`
+	FirstName  string         `json:"firstName"`
+	LastName   string         `json:"lastName"`
+	MiddleName string         `json:"middleName"`
+	BirthDate  string         `json:"birthDate"`
+	Sex        models.SexType `json:"sex"`
 }
 
 type CreateMedCardResponse struct {
@@ -21,14 +21,14 @@ type CreateMedCardResponse struct {
 	Message string `json:"message,omitempty"`
 }
 
-// CreateMedCard создает профиль пользователя
+// CreateMedCard создает мед карту пользователя
 //
-//	@Summary		Создание профиля пользователя
-//	@Description	Создает профиль пользователя с указанными данными
+//	@Summary		Создание мед карты пользователя
+//	@Description	Создает мед карты пользователя с указанными данными
 //	@Tags			MedCards
 //	@Accept			json
 //	@Produce		json
-//	@Param			request	body		CreateMedCardRequest	true	"Запрос для создания профиля пользователя"
+//	@Param			request	body		CreateMedCardRequest	true	"Запрос для создания мед карты пользователя"
 //	@Success		201		{object}	CreateMedCardResponse
 //	@Failure		400		{object}	CreateMedCardResponse
 //	@Failure		500		{object}	CreateMedCardResponse
@@ -39,7 +39,8 @@ func (s *Server) CreateMedCard(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, CreateMedCardResponse{Success: false, Message: err.Error()})
 		return
 	}
-	err := s.storage.CreateProfile(*s.cfg, request.Email, request.FirstName, request.LastName, request.MiddleName, request.BirthDate, request.Sex, request.ProfileImage)
+	fmt.Printf("request Email = '%v'", request.Email)
+	err := s.storage.CreateMedCard(*s.cfg, request.Email, request.FirstName, request.LastName, request.MiddleName, request.BirthDate, request.Sex)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, CreateMedCardResponse{Success: false, Message: err.Error()})
 		return
